--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/flipper_characters"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.characters.CharactersFragment">
 
+    <include
+        android:id="@+id/include_view_characters_loading_state"
+        layout="@layout/include_view_characters_loading_state" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_character"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_character" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ViewFlipper>
