--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -21,4 +21,8 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_character" />
 
+    <include
+        android:id="@+id/include_view_characters_error_state"
+        layout="@layout/include_view_characters_error_state" />
+
 </ViewFlipper>
